--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
+  <head></head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/assets/amity-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>aup.events - Your Campus Event Hub</title>
+    <meta name="title" content="aup.events - Your Campus Event Hub">
+    <meta name="description" content="Discover, join, and create exciting campus events at Amity University. From tech talks to cultural fests, never miss out on what's happening on campus!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.aup.events/">
+    <meta property="og:title" content="Amity Events - Your Campus Event Hub">
+    <meta property="og:description" content="Discover, join, and create exciting campus events at Amity University. From tech talks to cultural fests, never miss out on what's happening on campus!">
+    <meta property="og:image" content="https://app.aup.events/assets/meta-image.jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.aup.events/">
+    <meta property="twitter:title" content="Amity Events - Your Campus Event Hub">
+    <meta property="twitter:description" content="Discover, join, and create exciting campus events at Amity University. From tech talks to cultural fests, never miss out on what's happening on campus!">
+    <meta property="twitter:image" content="https://app.aup.events/assets/meta-image.jpeg">
+
+    <!-- Theme Color for Mobile Browsers -->
+    <meta name="theme-color" content="#4F46E5">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#4F46E5">
+
+    <!-- Additional Meta Tags -->
+    <meta name="keywords" content="amity university, campus events, student activities, college events, amity noida">
+    <meta name="author" content="Harsh Bansal">
+    <meta name="application-name" content="AUP Events">
   </head>
   <body>
     <div id="root"></div>
