--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head></head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/assets/amity-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
